--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <div id="root"></div>
+    <%if(htmlWebpackPlugin.options.env === 'development'){%>
+        <script src="/js/vendor.dll.js"></script>
+    <%}%>
 </body>
 </html>
